--- a/theme.css
+++ b/theme.css
@@ -7,6 +7,7 @@
 .w3-hover-texto:hover{color:#D92B2B!important;background-color:#1C1D26!important}
 .w3-verde,.w3-hover-verde:hover{color:#48C456!important;}
 .w3-azul,.w3-hover-azul:hover{color:#0073B1!important;}
+.w3-azul-texto{color:#1C1D26 !important;}
 
 .tira-sublinhado {
     text-decoration: none;
